<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:weightSum="1">

        <TextView
            android:layout_width="68dp"
            android:layout_height="54dp"
            android:text="@string/utc"
            android:id="@+id/textView2"
            android:textSize="25dp" />

        <EditText
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/Hours"
            android:layout_gravity="right"
            android:hint="@string/hours"

            android:maxLength="2"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/colon"
            android:id="@+id/textView3"
            android:textSize="20dp" />

        <EditText
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:maxLength="2"

            android:id="@+id/Minutes"
            android:layout_gravity="center_horizontal"

            android:hint="@string/mins"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AM"
            android:id="@+id/AMPM" />

    </LinearLayout>

    <Switch
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="@string/ampm"
        android:id="@+id/switch1"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_weight="0.06" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/resultInfo"
        android:layout_marginTop="20dp"
        android:textSize="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/radioGroup"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_est"
            android:id="@+id/radioButtonEst"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cst"
            android:id="@+id/radioButtonCst"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mst"
            android:id="@+id/radioButtonmst"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pst"
            android:id="@+id/radioButtonpst"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear"
            android:id="@+id/radioButtonCLR"/>
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>